# gcms

./: .gitignore  README.md  design-qa.md  go.mod  go.sum  main.go  main_test.go  robots.txt  rss.xml  sitemap.xml
.github/workflows/: pilot-release.yml  pilot-windows.yml  release.yml
assets/css/: admin.css  public.css  style.css
assets/js/: admin.js  site.js  toc.js
desktop/: README.md  RELEASE.md  go.mod  package-lock.json  package.json  vite.config.js
desktop/scripts/: package-macos.sh  package-windows.cmd  package-windows.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: acp.rs  agent.rs  brains.rs  bridge.rs  cf.rs  cf_templates.rs  convo.rs  discovery.rs  gcms_remote.rs  keychain.rs  lib.rs  limits.rs  main.rs  managed.rs  node_boot.rs  pack.rs  path_env.rs  permit.rs  scheduled.rs  ssh.rs  static_server.rs  tasks.rs  tools.rs  transfer.rs  usage.rs
desktop/src-tauri/src/builtin/: SKILL.md  article.html  blog-index.html  corp.html  dark-tech.html  editorial.html  event.html  minimal.html  plugin.json  portfolio.html  saas.html  shop.html  warm-craft.html
desktop/src-tauri/src/builtin/blog/: article.html  index.html
desktop/src-tauri/src/builtin/boutique/: cart.html  index.html  product.html
desktop/src-tauri/src/builtin/corp/: about.html  contact.html  index.html
desktop/src-tauri/src/builtin/darkroom/: index.html  work.html
desktop/src-tauri/src/builtin/factory/: contact.html  index.html  product.html  products.html
desktop/src-tauri/src/builtin/fest/: index.html
desktop/src-tauri/src/builtin/ink/: article.html  index.html
desktop/src-tauri/src/builtin/machinery/: contact.html  index.html  product.html  products.html
desktop/src-tauri/src/builtin/pilot-launch-lab/: capabilities.html  index.html  journal.html  stories.html
desktop/src-tauri/src/builtin/portfolio/: index.html  work.html
desktop/src-tauri/src/builtin/shop/: cart.html  index.html  product.html
desktop/src-tauri/src/builtin/warm-corp/: about.html  contact.html  index.html
docs/: cloudflare-connector.md
docs/multisite/: README.md
internal/backup/: backup.go  backup_test.go  s3.go
internal/i18n/: active_test.go  admin.go  admin_test.go  i18n.go
internal/platform/: control_operations.go  control_operations_test.go  google.go  platform_key_test.go  store.go  store_test.go
internal/seo/: seo.go  seo_test.go
internal/store/: admin_session_test.go  automation_test.go  content_types.go  content_types_test.go  discard.go  discard_test.go  extra_test.go  public_update_test.go  search_test.go  seed.go  seed_factory.go  seed_factory_test.go  seed_showcase.go  seed_test.go  similar.go  similar_test.go  store.go
scripts/: cms.conf  cms.ps1  cms.sh  gcms-caddy-sync.sh  package.sh
templates/: 404.html  api_docs.html  article.html  category.html  doc_detail.html  doc_list.html  generic_detail.html  generic_list.html  home.html  layout.html  link.html  links.html  page.html  product_detail.html  search.html  theme_preview.html
(+247 files in other folders)
