[package]
name = "gcms-pilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gcms_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1.52.3", features = ["process", "io-util", "time", "sync", "macros", "rt"] }
zip = "8.6.0"
thiserror = "2.0.18"
reqwest = { version = "0.13.4", features = ["json"] }
tauri-plugin-dialog = "2.7.1"
uuid = { version = "1.23.4", features = ["v4"] }
keyring-core = "1.0.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# 平台原生凭据存储（keyring-core 生态的同源 store）：macOS Keychain / Windows 凭据管理器。
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"
# 与 Tauri 同版本（0.61.3），保证 hwnd() 的 HWND 类型一致；用于给标题栏上色（DWM）。
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

